remove _site, add form to index.html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div> -->
             <br>
             <div class="col-xs-4 col-md-offset-4 text-center">
-                <form action="https://formspree.io/colliand@gmail.com" method="POST">
+                <form action="https://formspree.io/jupyter@pims.math.ca " method="POST">
                     <fieldset class="form-group">
                         <input type="text" class="form-control" id="exampleInputPassword1" name="name" placeholder="Your name">
                     </fieldset>
@@ -125,7 +125,7 @@
     <section class="primary" id="jupyter">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <div class="text-center">
                     <a href="https://jupyter.org/" target="_blank" >
                     <img src="img/portfolio/jupyter-logo.svg" class="wow zoomIn" alt=""></a>
                 </div
