--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </form>
             </div> -->
             <br>
-            <div class="col-xs-4 col-md-offset-4 text-center">
+            <div class="col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-4 text-center">
                 <form action="https://formspree.io/colliand@gmail.com" method="POST">
                     <fieldset class="form-group">
                         <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Your name">
