jupyter.ca ---> syzyzgy.ca

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Jupyter.ca -- an interactive collaborative computing environment for researchers in Canada.">
+    <meta name="description" content="Syzygy.ca -- an interactive collaborative computing environment for researchers in Canada.">
     <meta name="author" content="James Colliander">
 
-    <title>Jupyter.ca</title>
+    <title>Syzygy.ca</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -56,7 +56,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Jupyter.ca</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Syzygy.ca</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -72,7 +72,7 @@
                         <a href="https://survey.ubc.ca/s/jupyter-sign-up/"><i class="fa fa-play" aria-hidden="true"></i> Start</a>
                     </li> -->
                     <li>
-                        <a href="https://pims.jupyter.ca"><i class="fa fa-sign-in" aria-hidden="true"></i> Sign-in</a>
+                        <a href="https://pims.Syzygy.ca"><i class="fa fa-sign-in" aria-hidden="true"></i> Sign-in</a>
                     </li>
                 </ul>
             </div>
@@ -84,7 +84,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Jupyter.ca</h1>
+                <h1>Syzygy.ca</h1>
                 <!-- <hr> -->
                 <br>
             </div>
