add cybera logo

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     <i class="fa fa-arrow-up fa-3x"></i>
                     <h2 class="section-heading">Code, Analyze, Collaborate, Discover</h2>
                     <hr class="light">
-                    <p class="text-faded">The Pacific Institute for the Mathematical Sciences and Compute Canada are collaborating to deliver Jupyter Notebooks to researchers across Canada.</p>
+                    <p class="text-faded">The Pacific Institute for the Mathematical Sciences and Compute Canada are collaborating to deliver Jupyter to researchers across Canada.</p>
                     <!-- <a href="https://survey.ubc.ca/s/jupyter-sign-up/" class="btn btn-default btn-xl">Get Started!</a> -->
                 </div
             </div>
@@ -222,11 +222,21 @@
                     <div class="partners-box">
                         <a href="https://www.computecanada.ca/" target="_blank" >
                         <img src="img/portfolio/compute-canada.png" class="wow zoomIn" alt=""></a>
-                        <!-- <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i> -->
-                        <!-- <h3>BIRS</h3> -->
-                        <!-- <p class="text-muted">You can use this theme as is, or you can make changes!</p> -->
                     </div>
                 </div>
+            </div>
+            <div class="row">
+            <section class="primary" id="jupyter">
+        <div class="container">
+            <div class="row">
+                <div class="text-center">
+                    <a href="https://jupyter.org/" target="_blank" >
+                    <img src="img/portfolio/cybera-png-main.png" class="wow zoomIn" alt="" height="100"></a>
+                </div
+            </div>
+        </div>
+    </section>
+                
             </div>
         </div>
     </section>
