fix typo in README and update index.html to better represent Cybera's role

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                     <h2 class="section-heading"><i class="fa  fa-4x"></i></h2>
                     <h2 class="section-heading">Where? How? Why?</h2>
                     <hr class="light">
-                    <p class="text"><i class="fa fa-cogs" aria-hidden="true"></i> Hosted by Compute Canada</p>
-                    <p class="text"><i class="fa fa-university" aria-hidden="true"></i> Sign in with university credentials</p>
+                    <p class="text"><i class="fa fa-cogs" aria-hidden="true"></i> Hosted by Compute Canada and Cybera</p>
+                    <p class="text"><i class="fa fa-university" aria-hidden="true"></i> Sign in with university or Google credentials</p>
                     <p class="text"><i class="fa fa-users" aria-hidden="true"></i> Built for collaboration</p>
                     </div>
                 </div>
@@ -194,7 +194,7 @@
                     <i class="fa fa-arrow-up fa-3x"></i>
                     <h2 class="section-heading">Code, Analyze, Collaborate, Discover</h2>
                     <hr class="light">
-                    <p class="text-faded">The Pacific Institute for the Mathematical Sciences and Compute Canada are collaborating to deliver Jupyter to researchers across Canada.</p>
+                    <p class="text-faded">The Pacific Institute for the Mathematical Sciences, Compute Canada and Cybera are collaborating to deliver Jupyter to researchers, educators and innovators across Canada.</p>
                     <!-- <a href="https://survey.ubc.ca/s/jupyter-sign-up/" class="btn btn-default btn-xl">Get Started!</a> -->
                 </div
             </div>
