small tweaks to index file

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <br>
             </div>
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Launch Jupyter at your university?</h2>
+                    <h2 class="section-heading">Launch Jupyter at your university, school or company?</h2>
                     <!-- <hr class="light"> -->
         <!--     <div class="form-group">    
                 <form action="https://formspree.io/colliand@gmail.com" method="POST">
@@ -144,7 +144,7 @@
                     <hr class="light">
                     <p class="text"><i class="fa fa-book" aria-hidden="true"></i> Interactive computing notebooks</p>
                     <p class="text"><i class="fa fa-cloud" aria-hidden="true"></i> Research tools accessed via browser</p>
-                    <p class="text"><i class="fa fa-flask" aria-hidden="true"></i> Julia, Python 2, Python 3, R </p>
+                    <p class="text"><i class="fa fa-flask" aria-hidden="true"></i> Julia, Python, R </p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 text-center">
@@ -153,7 +153,7 @@
                     <h2 class="section-heading">Where? How? Why?</h2>
                     <hr class="light">
                     <p class="text"><i class="fa fa-cogs" aria-hidden="true"></i> Hosted by Compute Canada and Cybera</p>
-                    <p class="text"><i class="fa fa-university" aria-hidden="true"></i> Sign in with university or Google credentials</p>
+                    <p class="text"><i class="fa fa-university" aria-hidden="true"></i> Integrated with your single-sign-on system</p>
                     <p class="text"><i class="fa fa-users" aria-hidden="true"></i> Built for collaboration</p>
                     </div>
                 </div>
