--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="description" content="Syzygy.ca -- an interactive collaborative computing environment for researchers in Canada.">
     <meta name="author" content="James Colliander">
 
-    <title>Syzygy.ca</title>
+    <title>syzygy.ca</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -68,6 +68,27 @@
                     <li>
                         <a class="page-scroll" href="#partners">Partners</a>
                     </li>
+                    <li>
+                        <a href="http://intro.syzygy.ca">Intro</a>
+                    </li>
+                    <li>
+                        <div class="dropdown">
+                        <button class="btn btn-primary btn-sm navbar-btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown">
+                          Sign-in
+                          <span class="caret"></span>
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="https://ubc.syzygy.ca">UBC</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="https://ucalgary.syzygy.ca">UCalgary</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="https://cybera.syzygy.ca">Cybera</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="https://sfu.syzygy.ca">SFU</a>
+                        </div>
+                        </div>
+                    </li>
+            </div>
                     <!-- <li>
                         <a href="https://survey.ubc.ca/s/jupyter-sign-up/"><i class="fa fa-play" aria-hidden="true"></i> Start</a>
                         </li> -->
@@ -142,7 +163,7 @@
                     <h2 class="section-heading"><i class="fa  fa-4x"></i></h2>
                     <h2 class="section-heading">What is Jupyter?</h2>
                     <hr class="light">
-                    <p class="text"><i class="fa fa-book" aria-hidden="true"></i> Interactive computing notebooks</p>
+                    <p class="text"><i class="fa fa-book" aria-hidden="true"></i> Interactive computing environment</p>
                     <p class="text"><i class="fa fa-cloud" aria-hidden="true"></i> Research tools accessed via browser</p>
                     <p class="text"><i class="fa fa-flask" aria-hidden="true"></i> Julia, Python, R </p>
                     </div>
