fix link to intro site

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <a class="page-scroll" href="#partners">Partners</a>
                     </li>
                     <li>
-                        <a href="http://intro.syzygy.ca">Intro</a>
+                        <a href="http://intro.syzygy.ca/introduction">Intro</a>
                     </li>
                     <li>
                         <div class="dropdown">
