edit index file

--- a/index.html
+++ b/index.html
@@ -84,7 +84,14 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="https://cybera.syzygy.ca">Cybera</a>
                             <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="https://UManitoba.syzygy.ca">UManitoba</a>
+                            <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="https://sfu.syzygy.ca">SFU</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="https://uvic.syzygy.ca">UVic</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="https://UWaterloo.syzygy.ca">UWaterloo</a>
+                            <div class="dropdown-divider"></div>
                         </div>
                         </div>
                     </li>
