replace (coming soon) by (soon)

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="https://cybera.syzygy.ca">Cybera</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="https://UManitoba.syzygy.ca">UManitoba (coming soon)</a>
+                            <a class="dropdown-item" href="https://UManitoba.syzygy.ca">UManitoba (soon)</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="https://sfu.syzygy.ca">SFU</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="https://uvic.syzygy.ca">UVic (coming soon)</a>
+                            <a class="dropdown-item" href="https://uvic.syzygy.ca">UVic (soon)</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="https://UWaterloo.syzygy.ca">UWaterloo (coming soon)</a>
+                            <a class="dropdown-item" href="https://UWaterloo.syzygy.ca">UWaterloo (soon)</a>
                             <div class="dropdown-divider"></div>
                         </div>
                         </div>
