small tweaks to improve placement

--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                             <a class="dropdown-item" href="https://ubc.syzygy.ca">UBC</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="https://ucalgary.syzygy.ca">UCalgary</a>
+                            <a class="dropdown-item" href="https://ucalgary.syzygy.ca">Calgary</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="https://cybera.syzygy.ca">Cybera</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="https://UManitoba.syzygy.ca">UManitoba (soon)</a>
+                            <a class="dropdown-item" href="https://UManitoba.syzygy.ca">Manitoba (soon)</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="https://sfu.syzygy.ca">SFU</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="https://uvic.syzygy.ca">UVic (soon)</a>
+                            <a class="dropdown-item" href="https://uvic.syzygy.ca">Victoria (soon)</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="https://UWaterloo.syzygy.ca">UWaterloo (soon)</a>
+                            <a class="dropdown-item" href="https://UWaterloo.syzygy.ca">Waterloo (soon)</a>
                             <div class="dropdown-divider"></div>
                         </div>
                         </div>
@@ -107,8 +107,13 @@
                 <!-- <hr> -->
                 <br>
             </div>
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                  <h2 class="section-heading">Launch Jupyter at your university, school or company?</h2>
+            </div>
+            <br>
             <div class="col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-4 text-center">
                 <form action="https://formspree.io/jupyter@pims.math.ca" method="POST">
+                  <br>
                     <fieldset class="form-group">
                         <input type="text" class="form-control" id="exampleInputPassword1" name="name" placeholder="Your name">
                     </fieldset>
