add cc to list of available hubs

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="https://ucalgary.syzygy.ca">Calgary</a>
                             <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="https://cc.syzygy.ca">Compute Canada</a>
+                            <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="https://cybera.syzygy.ca">Cybera</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="https://UManitoba.syzygy.ca">Manitoba (soon)</a>
