--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <div class="col-lg-6 col-md-6 text-center">
                     <div class="partners-box">
                         <a href="https://www.computecanada.ca/" target="_blank" >
-                        <img src="img/portfolio/compute-canada.png" class="wow zoomIn" alt=""></a>
+                        <img src="img/portfolio/compute-canada.jpg" class="wow zoomIn" alt=""></a>
                     </div>
                 </div>
             </div>
