Updating site list
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/index.html
+++ b/index.html
@@ -86,13 +86,15 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="https://cybera.syzygy.ca">Cybera</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="https://UManitoba.syzygy.ca">Manitoba (soon)</a>
+                            <a class="dropdown-item" href="https://umanitoba.syzygy.ca">Manitoba</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="https://usask.syzygy.ca">Saskatchewan</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="https://sfu.syzygy.ca">SFU</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="https://uvic.syzygy.ca">Victoria (soon)</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="https://UWaterloo.syzygy.ca">Waterloo (soon)</a>
+                            <a class="dropdown-item" href="https://uwaterloo.syzygy.ca">Waterloo</a>
                             <div class="dropdown-divider"></div>
                         </div>
                         </div>
