Publishing _site to gh-pages

--- a/accuil.html
+++ b/accuil.html
@@ -159,7 +159,6 @@
         <div class="row">
             <div class="col-lg-6 col-md-6 text-center">
                 <div class="funding-box">
-                <h2 class="section-heading"><i class="fa  fa-4x"></i></h2>
                 <h2 class="section-heading">Qu'est-ce que Jupyter?</h2>
                 <hr class="light">
                 
@@ -173,7 +172,6 @@
             </div>
             <div class="col-lg-6 col-md-6 text-center">
                 <div class="funding-box">
-                <h2 class="section-heading"><i class="fa  fa-4x"></i></h2>
                 <h2 class="section-heading">Où? Comment? Pourquoi?</h2>
                 <hr class="light">
                 
@@ -236,7 +234,7 @@
             <h2 class="section-heading">Partenaires de vos Solutions</h2>
            <hr class="primary">
         </div><!-- cols -->
-      </div><!-- row -->
+     </div><!-- row -->
   </div><!-- container -->
   <div class="container">
     <div class="row">
@@ -251,14 +249,13 @@
              <a href="https://www.computecanada.ca/" target="_blank" >
                 <img src="img/portfolio/compute-canada.jpg" class="wow zoomIn" alt=""></a>
           </div><!-- partners-box -->
-        </div><!-- columns -->
-      </div><!-- columns -->
+       </div><!-- columns -->
     </div><!-- row -->
     <div class="row">
       <div class="text-center">
-        <a href="https://jupyter.org/" target="_blank" >
-          <img src="img/portfolio/cybera-png-main.png" class="wow zoomIn" alt="" height="100"></a>
-      </div>
+         <a href="https://jupyter.org/" target="_blank" >
+            <img src="img/portfolio/cybera-png-main.png" class="wow zoomIn" alt="" height="100"></a>
+      </div><!-- text-center -->
     </div><!-- row -->
   </div><!-- container -->
 </section>
