Publishing _site to gh-pages

--- a/accuil.html
+++ b/accuil.html
@@ -82,6 +82,8 @@
                 <span class="caret"></span>
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item" href="https://queensu.syzygy.ca">QueensU</a>
+                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://sfu.syzygy.ca">SFU</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://ubc.syzygy.ca">UBC</a>
