--- a/index.html
+++ b/index.html
@@ -82,11 +82,14 @@
                 <span class="caret"></span>
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                
                   <a class="dropdown-item" href="https://queensu.syzygy.ca">QueensU</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="https://ualberta.syzygy.ca">UAlberta</a>
+                  <a class="dropdown-item" href="https://mcmaster.syzygy.ca">McMaster</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://sfu.syzygy.ca">SFU</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="https://ualberta.syzygy.ca">UAlberta</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://ubc.syzygy.ca">UBC</a>
                   <div class="dropdown-divider"></div>
