Publishing _site to gh-pages

--- a/outage.html
+++ b/outage.html
@@ -133,13 +133,13 @@
      </div>
      <div class="col-xs-12" style="height:50px;"></div>
      <div class="col-lg-8 col-lg-offset-2 text-left">
-       <p>The following syzygy hubs are down for scheduled maintenance during
-       the periods indicated, they will be returned to service as soon as
-       possible. We apologize for any inconvenience.:</p>
+       <p>The following syzygy hubs are down for scheduled maintenance at the
+       times indicated, they will be returned to service as soon as possible.
+       We apologize for any inconvenience:</p>
        <ul>
          <li> <h3> cybera.syzygy.ca </h3></li>
          <ul>
-           <li><b>Starts:</b> June 30th 00:00:00 PDT </li>
+           <li><b>Starts:</b> June 29th 22:00:00 PDT </li>
            <li><b>Ends:</b> June 30th 18:00:00 PDT </li>
            <li><b>Reason:</b> Upstream provider scheduled maintenance</p> </li>
          </ul>
