Publishing _site to gh-pages

--- a/outage.html
+++ b/outage.html
@@ -139,8 +139,8 @@
        <ul>
          <li> <h3> cybera.syzygy.ca </h3></li>
          <ul>
-           <li><b>Starts:</b> June 29th 22:00:00 PDT </li>
-           <li><b>Ends:</b> June 30th 18:00:00 PDT </li>
+           <li><b>Starts:</b> June 29th 2018, 22:00:00 PDT </li>
+           <li><b>Ends:</b> June 30th 2018, 18:00:00 PDT </li>
            <li><b>Reason:</b> Upstream provider scheduled maintenance</p> </li>
          </ul>
        </ul>
