Publishing _site to gh-pages

--- a/outage.html
+++ b/outage.html
@@ -82,9 +82,9 @@
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 
-                  <a class="dropdown-item" href="https://queensu.syzygy.ca">QueensU</a>
-                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://mcmaster.syzygy.ca">McMaster</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="https://queensu.syzygy.ca">QueensU</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://sfu.syzygy.ca">SFU</a>
                   <div class="dropdown-divider"></div>
@@ -96,13 +96,19 @@
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://uleth.syzygy.ca">ULeth</a>
                   <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="https://ur.syzygy.ca">URegina</a>
+                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://usask.syzygy.ca">USask</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://utoronto.syzygy.ca">UToronto</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://uvic.syzygy.ca">UVic</a>
                   <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="https://uw.syzygy.ca">UW (Washington)</a>
+                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://uwaterloo.syzygy.ca">UWaterloo</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="https://yorku.syzygy.ca">YorkU</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://cybera.syzygy.ca">Cybera (google)</a>
                   <div class="dropdown-divider"></div>
