Publishing _site to gh-pages

--- a/outage.html
+++ b/outage.html
@@ -98,6 +98,8 @@
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://unb.syzygy.ca">UNB</a>
                   <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="https://uottawa.syzygy.ca">UOttawa</a>
+                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://ur.syzygy.ca">URegina</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://usask.syzygy.ca">USask</a>
