--- a/accuil.html
+++ b/accuil.html
@@ -83,6 +83,8 @@
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 
+                  <a class="dropdown-item" href="https://brocku.syzygy.ca">BrockU</a>
+                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://mcgill.syzygy.ca">McGill</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://mcmaster.syzygy.ca">McMaster</a>
