--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 
+                  <a class="dropdown-item" href="https://bcit.syzygy.ca">BCIT</a>
+                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://brocku.syzygy.ca">BrockU</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://mcgill.syzygy.ca">McGill</a>
@@ -103,6 +105,8 @@
                   <a class="dropdown-item" href="https://umanitoba.syzygy.ca">UManitoba</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://unb.syzygy.ca">UNB</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="https://unbc.syzygy.ca">UNBC</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://uottawa.syzygy.ca">UOttawa</a>
                   <div class="dropdown-divider"></div>
