--- a/outage.html
+++ b/outage.html
@@ -81,6 +81,8 @@
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 
+                  <a class="dropdown-item" href="https://bcit.syzygy.ca">BCIT</a>
+                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://brocku.syzygy.ca">BrockU</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://mcgill.syzygy.ca">McGill</a>
@@ -102,6 +104,8 @@
                   <a class="dropdown-item" href="https://umanitoba.syzygy.ca">UManitoba</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://unb.syzygy.ca">UNB</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="https://unbc.syzygy.ca">UNBC</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://uottawa.syzygy.ca">UOttawa</a>
                   <div class="dropdown-divider"></div>
