Publishing _site to gh-pages

--- a/outage.html
+++ b/outage.html
@@ -92,6 +92,8 @@
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://brocku.syzygy.ca">BrockU</a>
                   <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="https://etsmtl.syzygy.ca">ETSMTL</a>
+                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://mcgill.syzygy.ca">McGill</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="https://mcmaster.syzygy.ca">McMaster</a>
