Publishing _site to gh-pages

--- a/outage.html
+++ b/outage.html
@@ -279,16 +279,16 @@
   </div><!-- container -->
   <div class="container">
     <div class="row">
-       <div class="col-lg-6 col-md-6 text-center">
           <div class="partners-box">
              <a href="http://www.pims.math.ca/" target="_blank" >
                 <img src="img/portfolio/PIMS-circle-with-wordmark-CAPS.png" class="wow zoomIn" alt=""></a>
           </div><!-- partners box -->
        </div><!-- columns -->
-       <div class="col-lg-6 col-md-6 text-center">
-          <div class="partners-box">
-             <a href="https://www.computecanada.ca/" target="_blank" >
-                <img src="img/portfolio/compute-canada.jpg" class="wow zoomIn" alt=""></a>
+    </div>
+  <div class="row">
+          <div class="partners-box" style="margin-top: 2.5rem; margin-bottom: 2.5rem;">
+             <a href="https://www.alliancecan.ca/en" target="_blank" >
+                <img style="width:100%; height: 60px;" src="img/portfolio/dra.png" class="wow zoomIn" alt=""></a>
           </div><!-- partners-box -->
        </div><!-- columns -->
     </div><!-- row -->
